# gpui-component

./: .gitignore  Cargo.toml  DEVELOPMENT  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  story_tiles.rs  story_workspace.rs
crates/story/: Cargo.toml
crates/story/examples/: tiles.rs
crates/story/src/: accordion_story.rs  assets.rs  button_story.rs  calendar_story.rs  checkbox_story.rs  dropdown_story.rs  icon_story.rs  image_story.rs  input_story.rs  lib.rs  list_story.rs  main.rs  modal_story.rs  number_input_story.rs  picker_story.rs  popover_story.rs  popup_story.rs  progress_story.rs  resizable_story.rs  scrollable_story.rs  sidebar_story.rs  switch_story.rs  table_story.rs  text_story.rs  tooltip_story.rs  webview_story.rs
crates/story/src/fixtures/: pie.json
crates/ui/: Cargo.toml  default-colors.json
crates/ui-story/: Cargo.toml
crates/ui-story/src/: button_story.rs  checkbox_story.rs  dropdown_story.rs  input_story.rs  lib.rs  list_story.rs  picker_story.rs  popover_story.rs  switch_story.rs  tooltip_story.rs
crates/ui/locales/: ui.yml
crates/ui/src/: accordion.rs  animation.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  charts.rs  checkbox.rs  clipboard.rs  color_picker.rs  colors.rs  context_menu.rs  cursor.rs  disableable.rs  divider.rs  drawer.rs  dropdown.rs  empty.rs  event.rs  focusable.rs  history.rs  icon.rs  indicator.rs  input.rs  label.rs  lib.rs  link.rs  modal.rs  new_scrollbar.rs  notification.rs  number_input.rs  picker.rs  popover.rs  popup_menu.rs  prelude.rs  preview.rs  progress.rs  radio.rs  root.rs  scrollbar.rs  (+19 more)
crates/ui/src/dock/: dock.rs  invalid_panel.rs  mod.rs  pane.rs  pane_group.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tile_panel.rs  tiles.rs  tiles_panel.rs  toggle_buttons.rs  workspace.rs
crates/ui/src/dock/state/: LICENSE.md  README.md  mod.rs  surface.rs  surface_index.rs  window_state.rs
crates/ui/src/dock/state/tree/: mod.rs  node.rs
crates/ui/src/dock/tree/: mod.rs  node.rs  node_index.rs  tab_iter.rs
crates/ui/src/input/: blink_cursor.rs  change.rs  clear_button.rs  element.rs  history.rs  input.rs  input_otp.rs  mod.rs  otp_input.rs
crates/ui/src/list/: list.rs  list_item.rs  mod.rs
crates/ui/src/number_input/: mod.rs  modifier_handler.rs  number_input.rs  traits.rs
crates/ui/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/ui/src/scroll/: mod.rs  scroll_view.rs  scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/ui/src/sidebar/: footer.rs  group.rs  header.rs  menu.rs  mod.rs
crates/ui/src/story/: button_story.rs  checkbox_story.rs  input_story.rs  mod.rs  story.rs  switch_story.rs
crates/ui/src/tab/: tab.rs  tab_bar.rs
crates/ui/src/text_field/: blink_manager.rs  cursor_layout.rs  mod.rs  text_field.rs  text_view.rs
crates/ui/src/tiles/: canvas.rs  invalid_tile.rs  mod.rs  state.rs  tab_tile.rs  tile.rs  tile_canvas.rs
crates/ui/src/time/: calendar.rs  date_picker.rs  mod.rs  utils.rs
crates/ui/src/title_bar/: linux_window_controls.rs  title_bar.rs  windows_window_controls.rs
crates/ui/tests/fixtures/: layout.json
crates/util/: Cargo.toml
crates/util/src/: log.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: app_state.rs  dock.rs  item.rs  lib.rs  model_layer.rs  notification.rs  pane.rs  pane_group.rs  title_bar.rs  workspace.rs
crates/workspace/src/title_bar/: README.md  linux_window_controls.rs  title_bar.rs  windows_window_controls.rs
crates/workspace/src/util/: log.rs  mod.rs
script/: bootstrap  install-linux-deps  install-linux-deps.sh
