[workspace]
members = ["crates/app", "crates/ui", "crates/story", "crates/workspace"]

default-members = ["crates/app"]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "export-platform-window" }
windows = { version = "0.58.0", features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"] }
ui = { path = "crates/ui" }
story = { path = "crates/story" }
workspace = { path = "crates/workspace" }
anyhow = "1"
log = "0.4"
serde = "1.0.203"
serde_json = "1"
smallvec = "1"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
split-debuginfo = "unpacked"
debug = "limited"
codegen-units = 16

[profile.dev.package]
taffy = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
