[workspace]
members = ["crates/story", "crates/ui"]

default-members = ["crates/story"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "export-platform-window" }
log = "0.4"
serde = "1.0.203"
serde_json = "1"
smallvec = "1"
rust-embed = "8.5.0"
story = { path = "crates/story" }
ui = { path = "crates/ui" }
windows = { version = "0.58.0", features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
] }

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
