[package]
name = "gpui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
anyhow.workspace = true
rust-embed = "8"
log.workspace = true
workspace.workspace = true
ui.workspace = true
story.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
