[package]
name = "story"
version = "0.1.0"
edition = "2021"

[dependencies]
ui.workspace = true
gpui.workspace = true
serde.workspace = true
fake = "2.9.2"
anyhow = "1"
workspace.workspace = true
charts-rs = { version = "0.3", features = ["image-encoder"] }
image = "0.25.1"

[lints]
workspace = true
