[package]
name = "story"
version = "0.1.0"
edition = "2021"

[dependencies]
ui.workspace = true
gpui.workspace = true
fake = "2.9.2"
anyhow = "1"
workspace.workspace = true
charts-rs = "0.3"
regex = "1"
tokio = { version = "1", features = ["full"] }
smol = "2.0.0"
futures = "0.3"

[lints]
workspace = true
