[package]
name = "ui"
description = "UI components for the GPUI"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
gpui.workspace = true
anyhow = "1"
itertools = "0.13.0"
serde = "1.0.203"
serde_json = "1"

smallvec = "1.13.2"
unicode-segmentation = "1.11.0"
image = "0.25.1"
resvg = { version = "0.41.0", default-features = false }
usvg = { version = "0.41.0", default-features = false }
paste = "1"
once_cell = "1.19.0"
wry = "0"
smol = "1"
regex = "1"
rust-i18n = "3"
uuid = "1.10"

# Calendar
chrono = "0.4.38"

[lints]
workspace = true
