[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
ui.workspace = true
anyhow.workspace = true
schemars = "0"
parking_lot = "0"
serde.workspace = true
smallvec.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[lints]
workspace = true
